<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TomInputs">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mad Libs"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/appTitleText"
        android:textStyle="bold"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adjectiveText"
        android:layout_below="@+id/appTitleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/appTitleText"
        android:hint="adjective"
        android:layout_alignRight="@+id/appTitleText"
        android:layout_alignEnd="@+id/appTitleText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verbText"
        android:layout_below="@+id/adjectiveText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/appTitleText"
        android:hint="verb ending in -ing"
        android:layout_alignRight="@+id/appTitleText"
        android:layout_alignEnd="@+id/appTitleText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nounText"
        android:layout_below="@+id/verbText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/appTitleText"
        android:hint="noun"
        android:layout_alignRight="@+id/verbText"
        android:layout_alignEnd="@+id/verbText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adverbText"
        android:layout_below="@+id/nounText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="adverb"
        android:layout_alignRight="@+id/nounText"
        android:layout_alignEnd="@+id/nounText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/properNounText"
        android:layout_below="@+id/adverbText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="proper noun"
        android:layout_alignRight="@+id/adverbText"
        android:layout_alignEnd="@+id/adverbText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="See Your Story"
        android:id="@+id/submitWordsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
